--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "sqlmodel >=0.0.27,<0.0.28",
     "python-dotenv >=1.2.1,<2.0.0",
     "fastapi (>=0.121.2,<0.122.0)",
-    "uvicorn (>=0.38.0,<0.39.0)"
+    "uvicorn (>=0.38.0,<0.39.0)",
+    "psycopg2-binary (>=2.9.11,<3.0.0)"
 ]
 
 [build-system]
