--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "psycopg2-binary (>=2.9.11,<3.0.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
     "pwdlib[argon2] (>=0.3.0,<0.4.0)",
+    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
 ]
 
 [build-system]
