--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pyjwt (>=2.10.1,<3.0.0)",
     "pwdlib[argon2] (>=0.3.0,<0.4.0)",
     "passlib[bcrypt] (>=1.7.4,<2.0.0)",
+    "pytest (>=9.0.2,<10.0.0)",
 ]
 
 [build-system]
