--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,9 +14,8 @@ dependencies = [
     "uvicorn (>=0.38.0,<0.39.0)",
     "psycopg2-binary (>=2.9.11,<3.0.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
-    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
-    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
     "pytest (>=9.0.2,<10.0.0)",
+    "authlib (>=1.6.6,<2.0.0)",
 ]
 
 [build-system]
