--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,10 +12,10 @@ dependencies = [
     "python-dotenv >=1.2.1,<2.0.0",
     "fastapi (>=0.121.2,<0.122.0)",
     "uvicorn (>=0.38.0,<0.39.0)",
-    "psycopg2-binary (>=2.9.11,<3.0.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
     "pytest (>=9.0.2,<10.0.0)",
-    "authlib (>=1.6.6,<2.0.0)",
+    "supabase (>=2.27.0,<3.0.0)",
+    "psycopg2 (>=2.9.11,<3.0.0)",
 ]
 
 [build-system]
