--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,8 +14,9 @@ dependencies = [
     "uvicorn (>=0.38.0,<0.39.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
     "pytest (>=9.0.2,<10.0.0)",
-    "supabase (>=2.27.0,<3.0.0)",
     "psycopg2 (>=2.9.11,<3.0.0)",
+    "supabase-auth (>=2.27.0,<3.0.0)",
+    "supabase (>=2.27.0,<3.0.0)",
 ]
 
 [build-system]
