--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "psycopg2 (>=2.9.11,<3.0.0)",
     "supabase-auth (>=2.27.0,<3.0.0)",
     "supabase (>=2.27.0,<3.0.0)",
+    "pydantic[email] (>=2.12.5,<3.0.0)",
 ]
 
 [build-system]
