--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    
     "lucide-react": "^0.562.0",
+    "motion": "^12.25.0",
     "next": "16.1.1",
     "ogl": "^1.0.11",
     "react": "19.2.3",
